IC Module: fixed fields name (nameUpd, decisionUpd deprecated)

--- a/nicnbk-ui-angular2/src/app/corpmeetings/view/corp-meeting-ic-edit.component.html
+++ b/nicnbk-ui-angular2/src/app/corpmeetings/view/corp-meeting-ic-edit.component.html
@@ -169,7 +169,7 @@
                                         <div class="row">
                                             <div class="col-md-12">
                                                 <div class="col-md-10">
-                                                    <span>{{i + 1}}. {{topic.nameUpd}}</span>
+                                                    <span>{{i + 1}}. {{topic.name}}</span>
                                                 </div>
                                                 <div class="col-md-2">
 <!--                                                        <select>-->
@@ -197,7 +197,7 @@
                                             <div class="col-md-12">
                                                 <div class="col-md-10">
                                                     <span>
-                                                        <i>{{topic.decisionUpd}}</i>
+                                                        <i>{{topic.decision}}</i>
                                                     </span>
                                                 </div>
                                             </div>
