Notification html field name updated

--- a/nicnbk-ui-angular2/src/app/app.component.html
+++ b/nicnbk-ui-angular2/src/app/app.component.html
@@ -508,7 +508,7 @@
                             </div>
                             <br/>
                             <div class="alert alert-danger" *ngFor="let notification of getNotifications()">
-                                <span>{{notification.name}}</span>
+                                <span>{{notification.inAppName}}</span>
                                 <button class="btn btn-xs pull-right" (click)="closeNotification(notification)">close &nbsp; X</button>
                             </div>
                         </div>
