NB reporting: added dynamic year list generation

--- a/nicnbk-ui-angular2/src/app/reporting/view/main.nb.reporting.component.html
+++ b/nicnbk-ui-angular2/src/app/reporting/view/main.nb.reporting.component.html
@@ -68,11 +68,7 @@
                             </div>
                             <div class="col-md-2">
                                 <select class="form-control" [(ngModel)]="reportYear">
-                                    <option value="2016">2016</option>
-                                    <option value="2017">2017</option>
-                                    <option value="2018">2018</option>
-                                    <option value="2019">2019</option>
-                                    <option value="2020">2020</option>
+                                    <option *ngFor="let year of reportYearList" value="{{year}}">{{year}}</option>
                                 </select>
                             </div>
                         </div>
