--- a/nicnbk-ui-angular2/src/app/corpmeetings/view/lookup-values-corp-meetings.component.html
+++ b/nicnbk-ui-angular2/src/app/corpmeetings/view/lookup-values-corp-meetings.component.html
@@ -64,7 +64,7 @@
                     <td>{{item.type.nameEn}}</td>
                     <td>{{item.name}}</td>
                     <td>
-                        <button *ngIf = "item.editable" type="button" class="btn-xs btn-success" style="display: inline-block"
+                        <button type="button" class="btn-xs btn-success" style="display: inline-block"
                                 data-toggle="modal" data-target="#editModal" (click)="edit(item)">
                             <span class="glyphicon glyphicon-pencil"></span>
                         </button>
